working on css scaffolding

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -1,2 +1,41 @@
 @import bootstrap
 
+body
+  background: #333
+  color: #EEE
+  
+h1
+  color: #AAA
+  text-shadow: 1px 1px 0 black
+
+.main-content
+  padding-bottom:30px
+
+.title
+  margin-top:20px
+
+.chat-container
+  border: 1px solid white
+  padding: 20px
+  position: relative
+  .chat-window
+    width:670px
+    height:300px
+    border:1px solid white
+  .user-list
+    position:absolute
+    border: 1px solid white
+    right:20px
+    top:20px
+    width:200px
+    height:300px
+  .text-entry-form
+    padding-top:20px
+    margin:0
+    .chat-box
+      width:665px
+      background:#333
+      margin-right:20px
+.footer
+  text-align:center
+  padding: 30px
