--- a/views/index.jade
+++ b/views/index.jade
@@ -1,2 +1,8 @@
-h1= title
-p Welcome to #{title}
+.chat-container
+  .chat-window
+  .user-list
+  form.text-entry-form
+    input.chat-box(type='text')
+    a.btn.btn-inverse(href='#') Send
+      
+  
