--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,3 @@
-.chat-container
-  .chat-window
-  .user-list
-  form.text-entry-form
-    input.chat-box(type='text')
-    a.btn.btn-inverse(href='#') Send
+#js-chat-container.chat-container
       
   
